<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/action_bar_update_profile_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_alignParentTop="true"
        layout="@layout/action_bar_layout" >
    </include>

    <aclub.users.android.ui.cusimageview.RoundedImageView
        android:id="@+id/avatar_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spinner_country_martin_top"
        android:src="@drawable/user_profile_avatar" />

    <EditText
        android:id="@+id/full_name_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatar_profile"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:hint="@string/full_name" />

    <TextView
        android:id="@+id/update_profile_guide_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_name_edt"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:text="@string/update_profile_guide" />

    <LinearLayout
        android:id="@+id/auto_add_friend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_profile_guide_tv"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/auto_add_friend_cb"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/auto_add_friend_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_friend_automatic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/allow_add_friend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_add_friend"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/allow_add_friend_cb"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/allow_add_friend_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow_more_friend" />
    </LinearLayout>

    <Button
        android:id="@+id/update_profile_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/register_default_martin_top"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:background="@color/action_bar_background"
        android:text="@string/register_label" />

</RelativeLayout>