<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/action_bar_verify_otp_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_alignParentTop="true"
        layout="@layout/action_bar_layout" >
    </include>

    <EditText
        android:id="@+id/verify_otp_pass_tv"
        android:layout_width="@dimen/verify_otp_pass_edittext_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar_verify_otp_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spinner_country_martin_top"
        android:text="8998"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="@dimen/otp_pass_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone_num_verify_otp_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_otp_pass_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:text="0979439395"
        android:textColor="@color/action_bar_background"
        android:textSize="@dimen/otp_num_text_size" />

    <TextView
        android:id="@+id/resend_otp_notify_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_num_verify_otp_pass_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:gravity="center_horizontal"
        android:text="@string/send_otp_pass_noti"
        android:textSize="@dimen/otp_num_text_size" />

    <TextView
        android:id="@+id/resent_otp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resend_otp_notify_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:layout_marginTop="@dimen/register_default_martin_top"
        android:gravity="center_horizontal"
        android:text="@string/send_otp_pass_again"
        android:textSize="@dimen/otp_num_text_size" />

    <Button
        android:id="@+id/verify_otp_buton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/register_button_martin_bottom"
        android:layout_marginLeft="@dimen/spinner_country_martin_left"
        android:layout_marginRight="@dimen/spinner_country_martin_left"
        android:background="@color/action_bar_background"
        android:text="@string/confirm_register_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/register_button_text_size" />

</RelativeLayout>