<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daimajia.slider.demo.MainActivity" >

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        custom:auto_cycle="true"
        custom:indicator_visibility="visible"
        custom:pager_animation="Accordion"
        custom:pager_animation_span="1100" />

    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center|center_vertical"
        custom:selected_color="#0095BF"
        custom:selected_drawable="@drawable/bird"
        custom:selected_height="6dp"
        custom:selected_padding_left="5dp"
        custom:selected_padding_right="5dp"
        custom:selected_width="6dp"
        custom:shape="oval"
        custom:unselected_color="#55333333"
        custom:unselected_height="6dp"
        custom:unselected_padding_left="5dp"
        custom:unselected_padding_right="5dp"
        custom:unselected_width="6dp" />

    <!--
         <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator2"
        style="@style/AndroidImageSlider_Corner_Oval_Orange"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    -->

    <ListView
        android:id="@+id/transformers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slider" >
    </ListView>

    <Button
        android:id="@+id/facebook_login_btn"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_button_height"
        android:layout_alignParentBottom="true"
        android:background="@color/facebook_login_btn_background_color"
        android:text="@string/register_facebook"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/login_register_linearlayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_button_height"
        android:layout_above="@id/facebook_login_btn"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/login_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/login_textview_size" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_view_martin_top_bottom"
            android:layout_marginTop="@dimen/login_view_martin_top_bottom"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/register_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/login_textview_size" />
    </LinearLayout>

</RelativeLayout>